# Pyrostates

./: LICENSE  README.md  pyproject.toml
examples/: advanced.py  conversation.py  simple.py  standard.py
pyrostates/: __init__.py  filters.py  global_state_machine.py  state.py  state_group.py  state_machine.py
